--- a/src/components/sorting-page/sorting-page.module.css
+++ b/src/components/sorting-page/sorting-page.module.css
@@ -15,3 +15,11 @@
   display: flex;
   column-gap: 12px;
 }
+
+.container {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  column-gap: 5px;
+  margin: 50px auto 0;
+}
